Updated Running Script for 100M sharded